@@ -1,3 +1,5 @@
 DIST kadu-0.6.0.1.tar.bz2 1566609 RMD160 06709d16dd84a10c917fb12ee3dd06eb4ef18879 SHA1 727c5b25b7178f8d947497182da6817c170b7d6a SHA256 5b022f3043b112bbba6115bdf2877ff01d6b3b1342d74db5977fa92b1662d68c
+DIST kadu-0.6.0.2.tar.bz2 1568547 RMD160 2e8952831cada064c1caa65b943b6e44880b39c3 SHA1 efbae7840078eab46c5ac20d6e7397cf1c1457bd SHA256 8e06b554761e39890e48ba723145d4e1e0919cc84fcd978f215a6e2a30f87bfa
 EBUILD kadu-notify-0.6.0.1.ebuild 206 RMD160 ed57a80f05e37f864bd6cd742d05d13bab9506f8 SHA1 f5a66e0bb821eb92d470566a88fa8856fa0d08d1 SHA256 3c944ec17082fa9c8018d14462916ae411ee473c58d869f6cbd581eaae6dceb7
-MISC ChangeLog 304 RMD160 daf4e1bfee8b3cd098e41145f4cd88919a2a60f2 SHA1 7b6b15b076372bce7165fa1c4238b13586796115 SHA256 84841b52fecf7b27852691631bad48c73ff23015d63b308918c3cfaa9b59fb43
+EBUILD kadu-notify-0.6.0.2.ebuild 206 RMD160 ed57a80f05e37f864bd6cd742d05d13bab9506f8 SHA1 f5a66e0bb821eb92d470566a88fa8856fa0d08d1 SHA256 3c944ec17082fa9c8018d14462916ae411ee473c58d869f6cbd581eaae6dceb7
+MISC ChangeLog 395 RMD160 d48a63b27db6b92e2fa1d22e13d1ae952da33d44 SHA1 6eda2fcc370d4490c238d71ab3bd7d808725531f SHA256 d15e3e4b7f20d012b0049a0e6e852c447c148a9862d870379e9ad413260edbb8
