@@ -1,0 +1,6 @@
+inherit kadu-module
+
+SRC_URI="http://www.kadu.net/download/stable/kadu-${K_PV}.tar.bz2"
+DESCRIPTION="Kadu module that provides common API for notify modules"
+HOMEPAGE="http://kadu.net"
+KEYWORDS="amd64 x86"
